[package]
name = "exonum_jsonrpc"
version	= "0.3.0"
authors	= ["Andrew Poelstra <apoelstra@wpsoftware.net>",
           "Jean Pierre De Jesus Dudey Diaz <jeandudey@hotmail.com>",
           "The Exonum Team <exonum@bitfury.com>"]
license	= "CC0-1.0"
repository = "https://github.com/exonum/jsonrpc"
description	= "Rust support for the JSON-RPC 1.0 protocol"
readme	= "README.md"

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
reqwest = "0.8.4"