[package]
name = "exonum_jsonrpc"
version	= "0.5.1"
authors	= ["Andrew Poelstra <apoelstra@wpsoftware.net>",
           "Jean Pierre De Jesus Dudey Diaz <jeandudey@hotmail.com>",
           "The Exonum Team <exonum@bitfury.com>"]
license	= "CC0-1.0"
repository = "https://github.com/exonum/jsonrpc"
description	= "Rust support for the JSON-RPC 1.0 protocol"
readme	= "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# See Issue https://github.com/seanmonstar/reqwest/issues/541
reqwest = "=0.9.17"
failure = "0.1"
failure_derive = "0.1"